# moq-flutter

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  build.yaml  moq-flutter.code-workspace  pubspec.yaml
android/app/: build.gradle.kts
docs/: PublishSequence.md  SubscribeSequence.md  draft-cenzano-moq-media-interop-03.txt  draft-ietf-moq-c4m-00.txt  draft-ietf-moq-catalogformat-01.txt  draft-ietf-moq-privacy-pass-auth-01.txt  draft-ietf-moq-warp-01.txt  draft-ietf-webtrans-http3-07.txt  draft-ietf-webtrans-overview-11.txt  draft-law-moq-carp-00.txt  draft-richter-webtransport-websocket-03.txt  draft-thomson-webtrans-session-limit-01.txt  draft-wilaw-moq-catalogformat-02.txt
docs/plans/: 2026-03-09-fix-audio-pipeline.md
docs/superpowers/plans/: 2026-03-24-draft14-compliance.md
ios/: Podfile
ios/Flutter/: Debug.xcconfig  Release.xcconfig
ios/Runner/: AppDelegate.swift  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  router.dart
lib/media/: moq_video_player.dart  moq_video_providers.dart  native_moq_player.dart
lib/moq/catalog/: moq_catalog.dart  moq_catalog_subscriber.dart  moq_timeline.dart
lib/moq/client/: moq_client.dart  replay_stream.dart
lib/moq/media/: audio_capture.dart  audio_encoder.dart  camera_capture.dart  linux_capture.dart  media_encoder.dart  moq_media_decoder.dart  native_capture_channel.dart  native_h264_encoder.dart  native_opus_encoder.dart  streaming_playback.dart  video_encoder.dart
lib/moq/packager/: moq_mi_packager.dart
lib/moq/protocol/: moq_data_parser.dart  moq_messages.dart  moq_messages_control.dart  moq_messages_control_extra.dart  moq_messages_data.dart  moq_messages_publish.dart  (+1 more)
lib/providers/: moq_providers.dart
lib/screens/: connection_screen.dart  moq_home_screen.dart  publisher_screen.dart  settings_screen.dart  viewer_screen.dart
lib/services/: native_media_player.dart  quic_transport.dart  settings_service.dart  webtransport_quinn_transport.dart
lib/widgets/: connection_status_card.dart  publishing_controls.dart  server_config_card.dart  track_config_card.dart  video_preview.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/: Podfile
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner/: AppDelegate.swift  Info.plist
macos/Runner.xcodeproj/: project.pbxproj
native/moq_quic/: Cargo.toml  build.rs
native/moq_quic/.cargo/: config.toml
native/moq_quic/native/moq_quic/include/: moq_quic.h
native/moq_quic/src/: lib.rs  media_player.rs  stream_writer.rs  webtransport.rs
scripts/: build_native.bat  build_native.sh
test/: widget_test.dart
tool/: build_native.dart  build_rust.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: CMakeLists.txt  Runner.rc  flutter_window.cpp  main.cpp  native_capture_plugin.cpp  native_capture_plugin.h
(+27 files in other folders)
