[package]
name = "moq_quic"
version = "0.1.0"
edition = "2021"
crate-type = ["cdylib"]

[lib]
name = "moq_quic"
crate-type = ["cdylib", "staticlib"]

[dependencies]
quinn = { version = "0.11", default-features = false, features = ["rustls", "runtime-tokio"] }
tokio = { version = "1.41", features = ["rt-multi-thread", "net", "time"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2.2"
log = "0.4"
futures = "0.3"

[features]
default = ["ring"]
ring = ["rustls/ring", "quinn/ring"]
aws-lc-rs = ["rustls/aws-lc-rs", "quinn/aws-lc-rs"]

# Platform-specific features
macos = ["ring"]
linux = ["aws-lc-rs"]

[build-dependencies]
cbindgen = "0.27"
