[package]
name = "moq_quic"
version = "0.1.0"
edition = "2021"

[lib]
name = "moq_quic"
crate-type = ["cdylib", "staticlib"]

[dependencies]
web-transport-quinn = { version = "0.10.1", default-features = false, features = ["ring"] }
quinn = { version = "0.11.9", default-features = false, features = ["rustls", "runtime-tokio"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "net", "time", "sync", "macros"] }
rustls = { version = "0.23.35", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2.2"
log = "0.4"
futures = "0.3"
dashmap = "6.1"
once_cell = "1.20"
bytes = "1.10"

[features]
default = ["ring"]
ring = ["rustls/ring", "quinn/ring", "web-transport-quinn/ring"]
aws-lc-rs = ["rustls/aws-lc-rs", "quinn/aws-lc-rs", "web-transport-quinn/aws-lc-rs"]

# Platform-specific features
macos = ["ring"]
linux = ["aws-lc-rs"]

[build-dependencies]
cbindgen = "0.29.2"

