[package]
name = "moq_quic"
version = "0.1.0"
edition = "2021"

[lib]
name = "moq_quic"
crate-type = ["cdylib", "staticlib"]

[dependencies]
web-transport-quinn = { version = "0.11.6", default-features = false, features = ["ring"] }
quinn = { version = "0.11.9", default-features = false, features = ["rustls", "runtime-tokio"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "net", "time", "sync", "macros"] }
rustls = { version = "0.23.37", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2.2"
log = "0.4"
futures = "0.3.32"
dashmap = "6.1"
once_cell = "1.20"
bytes = "1.11.1"
url = "2"

# Media playback (optional, desktop-only)
libmpv2-sys = { version = "4.0.1", optional = true }
parking_lot = { version = "0.12", optional = true }

[features]
default = ["ring"]
ring = ["rustls/ring", "quinn/ring", "web-transport-quinn/ring"]
aws-lc-rs = ["rustls/aws-lc-rs", "quinn/aws-lc-rs", "web-transport-quinn/aws-lc-rs"]
media-player = ["dep:libmpv2-sys", "dep:parking_lot"]

# Platform-specific features
macos = ["ring"]
linux = ["aws-lc-rs"]

[build-dependencies]
cbindgen = "0.29.2"

